# mtcode

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  index.html  kill.bat  package-lock.json  package.json  release.bat  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
backlog/: 2026-03-25_01_kickoff.md  2026-03-25_02_phase0_spike_setup.md  2026-03-25_03_arch_decisions_pinning.md  2026-03-25_04_bootstrap_scaffold.md  2026-03-25_05_native_core_ipc_baseline.md  2026-03-25_06_lazy_tree_connected.md  2026-03-25_07_tabs_dirty_save.md  2026-03-25_08_find_replace_in_file.md  2026-03-25_09_project_search_streaming.md  2026-03-25_10_build_validation.md  2026-03-25_11_launch_readiness_status.md  2026-03-25_12_run_gate_status.md  2026-03-25_13_editor_height_fix.md  2026-03-25_14_autosave_settings.md  2026-03-25_15_open_file_folder_fix.md  2026-03-25_16_vscode_dark_redesign.md  2026-03-25_17_runtime_files_missing.md  2026-03-26_18_runtime_verified_tauri_dev_ready.md  2026-04-08_19_fix_removeChild_cmd_search.md  2026-04-08_20_toast_notifications.md  2026-04-08_21_plc_beautify_validation.md  2026-04-08_22_save_before_close_dialog.md  2026-04-09_23_fkeys_cmdpalette_bookmarks_build.md  2026-04-11_19_ai_assistant_ollama.md
help/: help.md
scripts/: build-portable.ps1  prepare-ollama.mjs
src/: App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs
src/components/: AIAssistant.tsx  FileTree.tsx  (+17 more)
themes/: monokai.json  mtcode.json  norton.json
(+19 files in other folders)
