[package]
name = "mtcode"
version = "0.1.0"
description = "MTCode editor"
authors = ["MTCode Team"]
license = "Proprietary"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.8", features = [ "window-all", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "path-all", "shell-open"] }
walkdir = "2.5"
encoding_rs = "0.8"
notify = "6"
regex = "1"
calamine = { version = "0.24", features = ["dates"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
